--- a/css/main.css
+++ b/css/main.css
@@ -70,5 +70,50 @@ img {
     padding: 2em;
     background: #181818;
   }
+  h2 {
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+  }
+  h2::before {
+    content: " ";
+    position: absolute;
+    width: 60%;
+    height: 10px;
+    z-index: -1;
+    bottom: -0.3em;
+    background: purple;
+    border-radius: 1em;
+  }
+  .secondary {
+    margin-top: 2em;
+  }
+  img {
+    width: 100%;
+  }
+  h3 {
+    color: #c7c7c7;
+    margin: 1.5em 0 1em;
+  }
+  p.span-all {
+    -webkit-column-span: all;
+            column-span: all;
+    font-size: 1.6em;
+    padding: 0.5em;
+    margin: 2em 0;
+    color: white;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .outer {
+    margin: 0 auto;
+    width: 80%;
+  }
+  section {
+    -webkit-column-count: 3;
+            column-count: 3;
+  }
 }
 /*# sourceMappingURL=main.css.map */
